  * rtlwifi: rtl8723ae: Fix typo in firmware names
  * [x86] Change INTEL_MEI_ME back to a module (Closes: #717383)
  * [armhf/armmp] Enable NET_CALXEDA_XGMAC as module (Closes: #717269)
  * linux-source: Switch compression of tarball and patch to xz.  Disable
    compression of package (but use gzip, to keep old tools happy).

 -- Arnaud Patard <arnaud.patard@rtp-net.org>  Tue, 16 Jul 2013 08:19:29 +0200

linux (3.10.1-1) unstable; urgency=low

  * New upstream release: http://kernelnewbies.org/Linux_3.10
    - netfilter: nf_nat_sip: fix mangling (Closes: #715822)
    - drm/i915: Add HPD IRQ storm detection (Closes: #572537)
    - ipv6: ip6_sk_dst_check() must not assume ipv6 dst (CVE-2013-2232)
    - af_key: fix info leaks in notify messages (CVE-2013-2234)
  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.10.1
    - libceph: Fix NULL pointer dereference in auth client code (CVE-2013-1059)
    - ceph: fix sleeping function called from invalid context.
    - libceph: fix invalid unsigned->signed conversion for timespec encoding
    - module: do percpu allocation after uniqueness check. No, really!
    - charger-manager: Ensure event is not used as format string
    - hpfs: better test for errors
    - crypto: sanitize argument for format string
    - MAINTAINERS: add stable_kernel_rules.txt to stable maintainer information
    - futex: Take hugepages into account when generating futex_key
    - tty: Reset itty for other pty
    - Revert "serial: 8250_pci: add support for another kind of NetMos
      Technology PCI 9835 Multi-I/O Controller"
    - NFSv4.1 end back channel session draining
    - nfsd4: fix decoding of compounds across page boundaries
    - KVM: VMX: mark unusable segment as nonpresent
    - SCSI: sd: Fix parsing of 'temporary ' cache mode prefix
    - cpufreq: Fix cpufreq regression after suspend/resume
    - Revert "memcg: avoid dangling reference count in creation failure"
	
  [ Ben Hutchings ]